fixed weird spacing

--- a/css/style.css
+++ b/css/style.css
@@ -648,7 +648,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #intro {
   width: 100%;
-  height: 118vh;
+  height: 121vh;
   background: url("https://res.cloudinary.com/damnzwekj/image/upload/c_fill,dpr_auto,f_auto,q_auto,w_auto:100:1280/v1/TogaHacks/backgrounds/intro-bg_ngqj6c.jpg")
     top center;
   background-size: cover;
@@ -963,7 +963,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #speakers {
-  padding: 23vh 0;
+  padding: 10vh 0 23vh;
   margin-top: -17vh;
   z-index: -2;
 
@@ -1089,7 +1089,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #schedule {
-  padding: 23vh 0;
+  padding: 10vh 0 20vh;
   margin-top: -17vh;
   z-index: -11;
 
@@ -1421,7 +1421,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #supporters {
-  padding: 60px 0;
+  padding: 5vh 0 6vh;
 }
 
 #supporters .supporters-wrap {
@@ -1496,7 +1496,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #faq {
-  padding: 10vh 0 23vh 0;
+  padding: 5vh 0 23vh 0;
 
   z-index: -10;
 
